<resources>
    <string name="app_name">MyProperty</string>
    <string name="fullname">Fullname</string>
    <string name="signup">New user? Sign Up</string>
    <string name="id_image">Upload Image</string>
    <string name="id_alamat">Alamat</string>
    <string name="id_tipeproperti">Tipe \nProperti</string>
    <string name="id_harga">Harga</string>
    <string name="id_luasbangunan">Luas \nBangunan</string>
    <string name="id_luastanah">Luas Tanah</string>
    <string name="id_jlhkamarmandi">Jlh Kamar \nMandi</string>
    <string name="id_jlhkamartidur">Jlh Kamar \nTidur</string>
    <string name="id_fasilitasyangada">Fasilitas \nyang ada</string>
    <string name="login"> LOGIN </string>
    <string name="api_key">changeme</string>
    <string name="upload_image">Upload Image</string>
    <string name="jumlah_kamar_tidur">Jumlah Kamar Tidur</string>
    <string name="fasilitas_yang_ada">Fasilitas yang ada</string>
    <string name="id_submit">Submit</string>
    <string name="jumlah_kamar_mandi">Jumlah Kamar Mandi</string>
    <string name="luas_tanah">Luas Tanah</string>
    <string name="alamat">Alamat</string>
    <string name="todo">TODO</string>
    <string name="tipe_properti">Tipe Properti</string>
    <string name="harga">Harga</string>
    <string name="luas_bangunan">Luas Bangunan</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="nohp">No.Hp</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="create_profile">Create Profile</string>
    <string name="nama_daerah">Nama daerah</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="alamat_surel">alamat surel</string>
    <string name="harga_properti">Harga properti</string>
    <string name="alamat_properti">Alamat properti</string>

    <string-array name="tipe">
        <item>Jual</item>
        <item>Sewa</item>
    </string-array>
</resources>
